--- a/NBitcoin.Secp256k1/NBitcoin.Secp256k1.csproj
+++ b/NBitcoin.Secp256k1/NBitcoin.Secp256k1.csproj
@@ -11,7 +11,7 @@
 		<RepositoryType>git</RepositoryType>
 	</PropertyGroup>
   <PropertyGroup>
-    <TargetFrameworks>net6.0;netstandard2.1</TargetFrameworks>
+    <TargetFrameworks>net6.0</TargetFrameworks>
     <Version Condition=" '$(Version)' == '' ">3.1.1</Version>
   </PropertyGroup>
   <PropertyGroup>
